<resources>
    <string name="app_name">eBay Catalog Search</string>
    <string name="keyword_text">Keyword</string>
    <string name="keyword">Enter Keyword</string>

    <string name="sort_by">Sort By</string>
    <string name="price_range">Price Range</string>
    <string name="min_price">Minimum Price</string>
    <string name="max_price">Maximum Price</string>
    <string name="condition">Condition</string>
    <string name="priceerror_msg">Please enter valid price values</string>

    <string name="error_msg">Please enter mandatory field</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>


    <string name="fb_app_id">2394460660784135</string>
    <string name="action_settings">Settings</string>
    <string-array name="filter_product">
        <item>Default</item>
        <item>Name</item>
        <item>Price</item>
        <item>Days</item>
    </string-array>
    <string-array name="sorting">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
